# Jovimetrix

./: .gitignore  LICENSE  NOTICE  README.md  __init__.py  eslint.config.mjs  jovimetrix.py  lexicon.py  node_list.json  package.json  pyproject.toml  reqire.txt  requirements.txt  util.py
.github/workflows/: publish_action.yml
core/: __init__.py  adjust.py  anim.py  animate.py  audio.py  calc.py  color.py  compose.py  create.py  create_glsl.py  device.py  device_midi.py  device_stream.py  flow.py  trans.py  utility.py  vars.py
core/utility/: batch.py  info.py  io.py
flow/: jovimetrix_anim_001.json  jovimetrix_overview.json  jovimetrix_texture_001.json  jovimetrix_webcam.json
help/: AKASHIC (JOV) 📓.md  BLEND (JOV) ⚗️.md
node/: adjust.py  blend.py  constant.py  extend.py  filtering.py  geometrix.py  hsv.py  invert.py  mapping.py  mirror.py  projection.py  shader.py  shape.py  tile.py  transform.py
nodes/: adjust.py  animate.py  audio.py  calc.py  compose.py  create.py  create_glsl.py  device.py  flow.py  pixel.py  trans.py  utility.py  wip.py
res/doc/: home.html  template_node.html  template_node_plain.html  template_param_input.html  template_param_output.html  template_section.html
res/glsl/: _.frag  _.vert  basic.glsl  basic.vert  blackhole.glsl  color-convert_hsv2lab.frag  color-convert_hsv2rgb.frag  color-convert_lab2hsv.frag  color-convert_lab2rgb.frag  color-convert_rgb2hsv.frag  color-convert_rgb2lab.frag  color-grayscale.frag  color-grayscale.glsl  comp-blend.frag  comp-blend.glsl  map-polar.glsl  map-rect-equal.glsl  noise-2D-simplex.glsl  shape-polygon.glsl  test.glsl  test2.glsl  trans-rotate.glsl  util-normal.frag  util-normal.glsl  util-tiler.glsl  warp-bulge.glsl
res/glsl/.lib/: _.foot  _.frag  _.head  _.vert  blend.lib  camera.lib  color.lib  const.lib  convert.lib  curve.lib  interp.lib  noise.lib  physics.lib  rand.lib  sdf.lib  shading.lib  vector.lib
res/glsl/adjust/: util-invert.frag
res/glsl/clr/: clr-flt-range.glsl  clr-grayscale.glsl
res/glsl/color/: color-blend.frag  color-convert.frag  color-grayscale.frag  color-hsv.frag
res/glsl/color/convert/: color-convert_hsv2lab.frag  color-convert_hsv2rgb.frag  color-convert_lab2hsv.frag  color-convert_lab2rgb.frag  color-convert_lab2xyz.frag  color-convert_rgb2hsv.frag  color-convert_rgb2lab.frag  color-convert_rgb2xyz.frag  color-convert_xyz2lab.frag  color-convert_xyz2rgb.frag
res/glsl/comp/: util-blend-normal.frag  util-blend.frag
res/glsl/cre/: cre-nse-brownian.glsl  cre-nse-gradient.glsl  cre-nse-mosaic.glsl  cre-nse-perlin.glsl  cre-nse-perlin_2D-periodic.glsl  cre-nse-perlin_2D.glsl  cre-nse-simplex.glsl  cre-nse-simplex_2D.glsl  cre-nse-value.glsl  cre-pat-checker.glsl  cre-shp-polygon.glsl
res/glsl/create/: create-gradient.frag  create-normal.frag  create-palette.frag
res/glsl/filter/: filter-posterize.frag  filter-range.frag  filter-warp.frag
res/glsl/map/: map-mercator copy.glsl  map-mercator.glsl  map-polar.glsl  map-rect_equal.glsl
res/glsl/modify/: filter-warp.frag  modify-repatile.frag  modify-transform.frag
res/glsl/trs/: trs-kaleidoscope.glsl  trs-mirror.glsl  trs-rotate.glsl  trs-tiler.glsl
res/glsl/util/: util-blend-normal.frag  util-blend.frag
res/glsl/vfx/: vfx-bulge.glsl  vfx-chromatic.glsl  vfx-cross_hatch.glsl  vfx-cross_stitch.glsl  vfx-crt.glsl  vfx-film-grain.glsl  vfx-frosted.glsl  vfx-pixelation.glsl  vfx-sepia.glsl  vfx-vhs.glsl
sup/: __init__.py  _tables.py  anim.py  audio.py  camera.py  color.py  comfy.py  comp.py  device.py  fractal.py  image.py  image_text.py  lexicon.py  mapping.py  midi.py  shader.py  snoise.py  stream.py  text.py  util.py
sup/image/: __init__.py  adjust.py  channel.py  color.py  compose.py  mapping.py  misc.py  torch.py  zend.py
web/: colorize.js  config - Copy.json  config.html  config.js  config.json  core.js  default.json  fun.js  index.html  jovi_metrix.css  jovi_sidecar.json  jovimetrix.css  jovimetrix.js  style.css  template.js  util.js  webgl.html  widget_vector.js
web/core/: colorize.js  config.js  core.js  core_color.js  core_color_old.js  core_colorize.js  core_config.js  core_cozy_data.js  core_cozy_drop.js  core_cozy_fields.js  core_cozy_menu.js  core_cozy_tips.js  core_experiment.js  core_help.js  core_help_old.js  core_node.js  core_tooltips.js  favorite.js  fontsize.js  fun.js  glsl.js  jovimetrix.js  util.js  util_color.js  util_config.js  util_dom.js  util_fun.js  util_jov.js  util_widget.js  widget.js  widget_rgb.js  widget_spinner.js  widget_typepicker.js
web/css/: style.css
web/js/: colorize.js  config.js  glsl.js  sort.js
web/nodes/: a_dynamic.js  adjust.js  akashic.js  array.js  batcher.js  blend.js  calc_binary.js  color_match.js  color_theory.js  constant.js  conversion.js  convert.js  crop.js  delay.js  dynamic.js  export.js  fileload.js  filter_mask.js  flatten.js  glsl.js  glsl_dynamic.js  gradient.js  gradient_map.js  graph.js  lerp.js  noise.js  op_binary.js  op_unary.js  pixel_merge.js  pixel_swap.js  queue.js  queue_too.js  route.js  select.js  setget.js  shape_gen.js  shape_generator.js  spout_writer.js  stack.js  stream_reader.js  (+12 more)
web/util/: util.js  util_api.js  util_color.js  util_config.js  util_dom.js  util_fun.js  util_help.js  util_jov.js  util_node.js  util_widget.js
web/widget/: widget_combo.js  widget_jimage.js  widget_jlabel.js  widget_jstring.js  widget_rgb.js  widget_spinner.js  widget_typepicker.js  widget_vector.js
