[project]
name = "jovimetrix"
description = "Integrates Webcam, MIDI, Spout and GLSL shader support. Animation via tick. Parameter manipulation with wave generator. Math operations with Unary and Binary support. Value conversion for all major types (int, string, list, dict, Image, Mask). Shape mask generation, image stacking and channel ops, batch splitting, merging and randomizing, load images and video from anywhere, dynamic bus routing with a single node, export support for GIPHY, save output anywhere! flatten, crop, transform; check colorblindness, make stereogram or stereoscopic images, or liner interpolate values and more."
version = "1.7.0"
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "Alexander G. Morano", email = "amorano@gmail.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
]
requires-python = ">=3.11"
dependencies = [
    "aenum",
    "aiohttp",
    "blendmodes",
    "daltonlens",
    "glfw",
    "loguru",
    "markdownify",
    "matplotlib",
    "mido[ports-rtmidi]",
    "mss",
    "numba",
    "numpy>=1.26.4,<2.0.0; python_version < '3.12'",
    "numpy>=2.0.0; python_version > '3.11'",
    "opencv-contrib-python",
    "Pillow",
    "PyOpenGL",
    "PyOpenGL-accelerate; python_version < '3.12'",
    "pywin32; platform_system==\"Windows\"",
    "requests",
    "scikit-image",
    "scikit-learn",
    "SpoutGL; platform_system==\"Windows\"",
    "stereoscopy[auto_align]",
    "vnoise",
    "pyobjc-framework-Quartz; platform_system=='Darwin'"
]

[project.urls]
Homepage = "https://github.com/Amorano/Jovimetrix"
Documentation = "https://github.com/Amorano/Jovimetrix/wiki"
Repository = "https://github.com/Amorano/Jovimetrix"
Issues = "https://github.com/Amorano/Jovimetrix/issues"

[tool.comfy]
PublisherId = "amorano"
DisplayName = "Jovimetrix"
Icon = "https://raw.githubusercontent.com/Amorano/Jovimetrix-examples/refs/heads/master/res/logo-jvmx.png"
