[project]
name = "jovimetrix"
description = "Animation via tick. Parameter manipulation with wave generator. Unary and Binary math support. Value convert int/float/bool, VectorN and Image, Mask types. Shape mask generator. Stack images, do channel ops, split, merge and randomize arrays and batches. Load images & video from anywhere. Dynamic bus routing. Save output anywhere! Flatten, crop, transform; check colorblindness or linear interpolate values."
version = "2.1.25"
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "Alexander G. Morano", email = "amorano@gmail.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
]
requires-python = ">=3.10"
dependencies = [
    "aenum",
    "git+https://github.com/cozy-comfyui/cozy_comfyui@main#egg=cozy_comfyui",
    "git+https://github.com/cozy-comfyui/cozy_comfy@main#egg=cozy_comfy",
    "matplotlib",
    "numpy>=1.25.0",
    "opencv-contrib-python",
    "Pillow"
]

[project.urls]
Homepage = "https://github.com/Amorano/Jovimetrix"
Documentation = "https://github.com/Amorano/Jovimetrix/wiki"
Repository = "https://github.com/Amorano/Jovimetrix"
Issues = "https://github.com/Amorano/Jovimetrix/issues"

[tool.comfy]
PublisherId = "amorano"
DisplayName = "Jovimetrix"
Icon = "https://raw.githubusercontent.com/Amorano/Jovimetrix-examples/refs/heads/master/res/logo-jvmx.png"
